--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraBot</title>
+    <title>GUIBot</title>
     <style>
         * {
             box-sizing: border-box;
@@ -77,11 +77,11 @@
 </head>
 <body>
     <div id="top-bar">
-        <h1>CHATBOT</h1>
+        <h1>GUI CHATBOT</h1>
     </div>
 
     <div id="chat-container">
-        <p>Welcome to SuperAluraBot</p>
+        <p>Welcome to SuperGuiBot</p>
     </div>
 
     <div id="input-container">
